--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,3 @@
-<footer class="site-footer">
-
-  <div class="wrapper">
-	<ul>
-	{% for item in site.data.social.items %}
-		<li><a href="{{ item.url }}">{{ item.title }}</a></li>
-	{% endfor %}
-	</ul>
-  </div>
-
+<footer class="textcenter">
+&copy; 2018 Atelier Abbey. All rights reserved.
 </footer>
