--- a/_sass/func.scss
+++ b/_sass/func.scss
@@ -1,4 +1,4 @@
-* {box-sizing:border-box;,background:none no-repeat scroll center center transparent;}
+* {box-sizing:border-box;background:none no-repeat scroll center center transparent;}
 img{-ms-interpolation-mode: bicubic; max-width: 100%;}
 a {text-decoration: none;}
 ::-moz-selection {text-shadow: none; background-color:#B2CCE6;}
