--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,7 @@
-<header class="site-header" role="banner">
+{% comment %}
+<header id="header" role="banner">
 
-  <div class="wrapper">
+  <div class="page-wrapper">
     {% assign default_paths = site.pages | map: "path" %}
     {% assign page_paths = site.header_pages | default: default_paths %}
     <a class="site-title" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
@@ -32,3 +33,4 @@
     {% endif %}
   </div>
 </header>
+{% endcomment %}
