--- a/_sass/setup.scss
+++ b/_sass/setup.scss
@@ -3,13 +3,8 @@
 * {
 	background: none no-repeat scroll center center transparent;
 }
-html {
-	background-color: #fff;
-	color: #000;
-	font: 14px/1.75em 'Open Sans', sans-serif;
-}
 h1, h2, h3, h4, h5, h6 {
-	
+	font-weight: normal;
 }
 ul, ol {
 	padding: 0 0 0 40px;
@@ -52,6 +47,56 @@ button, a.button, .button, html input[type="button"], input[type="reset"], input
 	bottom: 0;
 	left: 0;
 	right: 0;
+	background: #141213;
+	background: -moz-linear-gradient(top, #141213 0%, #231f20 100%);
+	background: -webkit-linear-gradient(top, #141213 0%,#231f20 100%);
+	background: linear-gradient(to bottom, #141213 0%,#231f20 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#141213', endColorstr='#231f20',GradientType=0 );
 	background-color: #3b4753;
 	color: #4dcdc4;
+}
+.bg-big {
+	min-height: 100vh;
+}
+.bg-big h1 {
+	background-color: #161526;
+}
+.bg-one, .bg-two, .bg-three, .bg-four, .bg-five {
+	color: #f1f2f2;
+	text-shadow: 0 -3px 2px rgba(0,0,0,0.75);
+}
+.bg-one {
+	background: #033a51;
+	background: -moz-linear-gradient(45deg, #033a51 0%, #032151 100%);
+	background: -webkit-linear-gradient(45deg, #033a51 0%,#032151 100%);
+	background: linear-gradient(45deg, #033a51 0%,#032151 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#033a51', endColorstr='#032151',GradientType=1 );
+}
+.bg-two {
+	background: #0a5a63;
+	background: -moz-linear-gradient(45deg, #0a5a63 0%, #033a51 100%);
+	background: -webkit-linear-gradient(45deg, #0a5a63 0%,#033a51 100%);
+	background: linear-gradient(45deg, #0a5a63 0%,#033a51 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0a5a63', endColorstr='#033a51',GradientType=1 );
+}
+.bg-three {
+	background: #0f0015;
+	background: -moz-linear-gradient(45deg, #0f0015 0%, #1a0038 100%);
+	background: -webkit-linear-gradient(45deg, #0f0015 0%,#1a0038 100%);
+	background: linear-gradient(45deg, #0f0015 0%,#1a0038 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0f0015', endColorstr='#1a0038',GradientType=1 );
+}
+.bg-four {
+	background: #262262;
+	background: -moz-linear-gradient(45deg, #262262 0%, #92278f 100%);
+	background: -webkit-linear-gradient(45deg, #262262 0%,#92278f 100%);
+	background: linear-gradient(45deg, #262262 0%,#92278f 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#262262', endColorstr='#92278f',GradientType=1 );
+}
+.bg-five {
+	background: #be1e2d;
+	background: -moz-linear-gradient(45deg, #be1e2d 0%, #f7941e 100%);
+	background: -webkit-linear-gradient(45deg, #be1e2d 0%,#f7941e 100%);
+	background: linear-gradient(45deg, #be1e2d 0%,#f7941e 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#be1e2d', endColorstr='#f7941e',GradientType=1 );
 }
