--- a/_sass/setup.scss
+++ b/_sass/setup.scss
@@ -2,7 +2,7 @@
 
 // Define defaults for each variable.
 
-$base-font-family: 'Roboto', sans-serif !default;
+$base-font-family: 'Raleway', sans-serif !default;
 $base-font-size:   20px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
@@ -184,7 +184,7 @@ table {
 
 
 h1, h2, h3, h4, h5, h6 {
-	font-weight: normal;
+	font-weight: 300;
 }
 ul, ol {
 	padding: 0 0 0 40px;
@@ -294,7 +294,6 @@ button, a.button, .button, html input[type="button"], input[type="reset"], input
 	padding: 25% 30px;
 	box-shadow: 0 0 3px rgba(0,0,0,0.75);
 	font-size: 10vh;
-	font-weight: 300;
 }
 #home-intro p.two_third {
 	margin: 0;
