--- a/_sass/setup.scss
+++ b/_sass/setup.scss
@@ -22,9 +22,9 @@ $table-text-align: left !default;
 
 // Width of the content area
 $content-width:    1356px !default;
+$on-tablet:        768px !default;
 
 $on-palm:          600px !default;
-$on-laptop:        800px !default;
 
 // Use media queries like this:
 // @include media-query($on-palm) {
@@ -247,6 +247,9 @@ button, a.button, .button, html input[type="button"], input[type="reset"], input
 	flex-flow: row nowrap;
 	align-items: center;
 	justify-content: space-between;
+  	@include media-query($on-tablet) {
+		flex-direction: column;
+	}
 }
 .bg-one, .bg-two, .bg-three, .bg-four, .bg-five {
 	color: #f1f2f2;
@@ -294,8 +297,11 @@ button, a.button, .button, html input[type="button"], input[type="reset"], input
 	padding: 25% 30px;
 	box-shadow: 0 0 3px rgba(0,0,0,0.75);
 	font-size: 10vh;
-}
-#home-intro p.two_third {
 	margin: 0;
-	padding: 0 8vw;
+}
+#home-intro p {
+	margin: 0;
+	max-width: 520px;
+	text-align: justify;
+	padding: 40px;
 }
