--- a/_sass/setup.scss
+++ b/_sass/setup.scss
@@ -290,14 +290,14 @@ button, a.button, .button, html input[type="button"], input[type="reset"], input
 	background: linear-gradient(45deg, #be1e2d 0%,#f7941e 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#be1e2d', endColorstr='#f7941e',GradientType=1 );
 }
-
 #home-intro h1 {
 	background-color: #161526;
 	text-align: center;
-	padding: 25% 30px;
+	padding: 2em 1em;
 	box-shadow: 0 0 3px rgba(0,0,0,0.75);
-	font-size: 10vh;
+	font-size: 7vh;
 	margin: 0;
+	max-width: 6em;
 }
 #home-intro p {
 	margin: 0;
